Closed Bug 1309117 Opened 8 years ago Closed 8 years ago

Crash in OOM | large | NS_ABORT_OOM | AppendUTF8toUTF16 | nsHTMLEditor::InsertObject

Categories

(Core :: DOM: Editor, defect)

x86
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-64d5eb05-429a-4f9c-8982-5b5db2161011.
=============================================================
When pasting image as data url, we use infallible allocator.  But I think we should use fallible allocator to avoid OOM.
Comment on attachment 8799710 [details]
Bug 1309117 - Make ImgFromData fallible.

https://reviewboard.mozilla.org/r/84840/#review83416

Although, I guess that we would crash with another point after here, anyway.

However, I think that this is right approach except using data URI.
Attachment #8799710 - Flags: review?(masayuki) → review+
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/2321811e0354
Make ImgFromData fallible. r=masayuki
https://hg.mozilla.org/mozilla-central/rev/2321811e0354
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: