editor/libeditor/HTMLEditorDataTransfer.cpp
@@ -1025,7 +1025,9 @@ ImgFromData(const nsACString& aType, const nsACString& aData, nsString& aOutput)
   aOutput.AssignLiteral("<IMG src=\"data:");
   AppendUTF8toUTF16(aType, aOutput);
   aOutput.AppendLiteral(";base64,");
-  AppendUTF8toUTF16(data64, aOutput);
+  if (!AppendASCIItoUTF16(data64, aOutput, fallible_t())) {
+    return NS_ERROR_OUT_OF_MEMORY;
+  }
   aOutput.AppendLiteral("\" alt=\"\" >");
   return NS_OK;
 }
